planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_2_5.jsp
nb_jobs nb_machines optimal
4 4 43 0
Times
8 5 10 10
5 5 5 3
9 3 5 4
3 3 9 10
Machines
2 3 1 4
2 1 3 4
3 2 1 4
2 4 1 3
Starts
3 11 20 30 
0 3 6 16 
0 11 15 20 
14 30 35 40 